@@ -2,6 +2,7 @@
 \alias{allocationTable}
 \alias{allocationTable.redcapDbConnection}
 \alias{allocationTable.redcapApiConnection}
+\alias{allocationTable_offline}
 \title{Allocation Tables for the Randomization Module}
 \description{Generate allocation table for the REDCap randomization module. 
   Randomization may be stratified by other (categorical) variables in the 
@@ -21,11 +22,18 @@
                             block.size.shift = 0,
                             seed.dev=NULL, seed.prod=NULL,  
                             proj=NULL, ...)
+allocationTable_offline(meta_data, random, strata=NULL, 
+                            group=NULL, dag.id=NULL, 
+                            replicates, block.size, 
+                            block.size.shift = 0,
+                            seed.dev=NULL, seed.prod=NULL, ...)
 }
 
 
 \arguments{
   \item{rcon}{A REDCap connection object as generated by \code{redcapConnection}}
+  \item{meta_data}{A text string giving the location of the data dictionary 
+    downloaded from REDCap.}
   \item{random}{The field name to be randomized.}
   \item{strata}{Field names by which to stratify the randomization.}
   \item{group}{A field name giving a group by which randomization should be 
@@ -59,6 +67,11 @@
 \details{
 Each element in \code{block.size} must be a multiple of the number of groups in the randomized
 variable.  
+
+The 'offline' version of the function operates on the data dictionary file downloaded from 
+REDCap.  This is made available for instances where the
+API can not be accessed for some reason (such as waiting for API approval from the
+REDCap administrator).
 
 The value of \code{replicates} controls how many allocations are generated.  It 
 is possible to get slightly more replicates than requested if your blocking design
